k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamfinity-api
  namespace: streamfinity-api
spec:
  selector:
    app: streamfinity-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
